Name:           smtLib
Version:        0.1
License:        AllRightsReserved
Author:         Iavor S. Diatchki
Maintainer:     diatchki@galois.com
Category:       SMT
Synopsis:       A library for working with the SMTLIB format.
Description:    A library for working with the SMTLIB format.
Build-type:     Simple
Cabal-version: >= 1.8
Extra-source-files:
  LICENSE,
  README,
  CHANGES

library
  hs-source-dirs: src

  exposed-modules:
    SMTLib1
    SMTLib1.QF_BV
    SMTLib1.QF_AUFBV
    SMTLib2
    SMTLib2.Core
    SMTLib2.BitVector
    SMTLib2.Array

  other-modules:
    SMTLib1.AST
    SMTLib1.PP
    SMTLib2.AST
    SMTLib2.PP

  build-depends:
    base,
    pretty


  GHC-options:    -O2 -Wall


executable smtLib-test

  hs-source-dirs: test

  main-is: Test.hs

  build-depends:
    base,
    smtLib,
    process
